--- a/TheThingApi.csproj
+++ b/TheThingApi.csproj
@@ -8,7 +8,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <Content Remove="Rest\http-client.env.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Rest\http-client.env.json.user" />
+    <None Include="Rest\http-client.env.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Google.Apis.Auth" Version="1.67.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
 </Project>
