--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Debug"
     }
+  },
+  "AppConfiguration": {
+    "AllowedLogins": [ "josehdorosario@gmail.com" ],
+    "OAuthAudience": "665373918058-lnkfqpc1q13vip4uv70ict846vo88g26.apps.googleusercontent.com"
   },
   "AllowedHosts": "*"
 }
